# blame-tracker

./: .gitignore  DEMO.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING.md  coverage_test.xml  example_coverage.xml  pyproject.toml
examples/: create_test_repo.sh
src/blame_tracker/: __init__.py  cli.py  test_module.py
src/blame_tracker/core/: __init__.py  blame_intersector.py  blame_tracker.py  cobertura_parser.py  git_analyzer.py
src/blame_tracker/models/: __init__.py
src/blame_tracker/reporters/: __init__.py  html_reporter.py
tests/: __init__.py  test_blame_intersector.py  test_cobertura_parser.py  test_integration.py  test_models.py
